--- a/src/styles/Calendar.scss
+++ b/src/styles/Calendar.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 2% 6%;
+    margin: 2% 6% 4%;
     align-items: center;
 }
 
