--- a/client/src/styles/DaysList.scss
+++ b/client/src/styles/DaysList.scss
@@ -15,6 +15,18 @@
     height: 150px !important;
 }
 
+.dayItem-another-month {
+    .dayCard  {
+        background: azure;
+    }
+}
+
+.dayItem-another-month[disabled]
+{
+    pointer-events: none;
+    opacity: 0.7;
+}
+
 .MuiListItem-root {
     padding: 2% !important;
 }
